update notification service and others